--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
       Meu Site
     </h1
     <h3>
-      Este é meu primeiro site
+      Este é meu primeiro site 
+      <br />
+      E aqui houve uma quebra de linha
     </h3>
   </body>
 </html>
