--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     
       <label for="nacionalidade">Nacionalidade</label>
       <select id="nacionalidade">
-        <option id="brasileiro">Brasileiro</option>
-        <option id="estrangeiro">Estrangeiro</option>
+        <option value="brasileiro">Brasileiro</option>
+        <option value="estrangeiro">Estrangeiro</option>
       </select>
       
     </form>
