--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </br>
     
       <label for="cpf">Cpf</label>
-      <input id="cpf" type="text">
+      <input id="cpf" type="number">
       </br>
     
       <label for="nacionalidade">Nacionalidade</label>
