--- a/index.html
+++ b/index.html
@@ -32,10 +32,15 @@
         <option value="estrangeiro">Estrangeiro</option>
       </select>
       
+      </br></br>
       <label for="minibio">Minibio</label>
-
+      </br>
       <textarea id="minibio" rows="5" cols="10">
       </textarea>
+      
+
+     </br>
+    <button type="submit">Enviar</button>
 
     </form>
   </body>
