--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <img src="imagem/oab.jpg" alt="Logo"></img> <br/>
 
-    <h1 class="esverdeado">
+   <h1 class="esverdeado" style="text-align:center;">
         Meu Site
     </h1>
 
