--- a/index.html
+++ b/index.html
@@ -52,5 +52,15 @@
      <button type="submit">Enviar</button>
 
     </form>
+
+    <script src="javascript/matematica.js"></script>
+
+    <script>
+
+      alert( soma( 3,2) );
+    
+    </script>
+
   </body>
+
 </html>
